<resources>
    <string name="app_name">CardDeck</string>
    <string name="card_game">CARD GAME</string>
    <string name="text_info">A simple card game where you guess if the next card in the pile will be larger or smaller than the one you have right now.</string>
    <string name="current_card">current card:</string>
    <string name="what_guess">What is your guess?</string>
    <string name="won_lost">You guessed correct</string>
    <string name="finished_play_again">And you finished this round.</string>
    <string name="play_again">Do you want to play again?</string>
    <string name="smaller">smaller</string>
    <string name="larger">larger</string>
    <string name="larger_or_smaller">Larger or smaller?</string>
    <string name="livesLeft">You have 5 lives left</string>
</resources>